--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -43,7 +43,7 @@ section {
     padding-top: 3rem;
     padding-bottom: 3rem;
   }
-  min-height: 50vh;
+  min-height: 30vh;
 }
 
 /* adjusting scrolling for fixed navbar */
